# seerose-ros

./: LICENSE  README.md
lab_msgs/: CMakeLists.txt  README.md  package.xml
lab_msgs/msg/: CameraProbability.msg  ExperimentResult.msg  Line.msg  Plane.msg  PointingGesture.msg  ProbabilityCoefficents.msg  RegionOfInterestStamped.msg  VirtualBorder.msg  VirtualBorderArray.msg
lab_msgs/srv/: CallCameraSelection.srv  CheckCameraResponsibility.srv  FindObjectWithMaxLocalProb.srv  GetLastMaxProbObject.srv  GetObjForId.srv  GetObjects.srv  GetPoint.srv  GetUInt8.srv  GraspPosition.srv  MapUpdate.srv  SetUInt8.srv
map_update/: CMakeLists.txt  README.md  package.xml
map_update/include/map_update/: MapCreater.hpp  MapUpdaterNode.h  OGM_Values.hpp
map_update/src/: MapCreater.cpp  MapUpdaterNode.cpp
pointer_detection/: CMakeLists.txt  README.md  package.xml
pointer_detection/include/pointer_detection/: PointerLocalizerIE.h  PointerLocalizerRobot.h
pointer_detection/launch/: pointer_localizer_ie.launch  pointer_localizer_robot.launch
pointer_detection/src/: PointerLocalizerIE.cpp  PointerLocalizerRobot.cpp
